Fix for bug #2629 NULLIF() doesn't behave as described in manual